--- a/Thesis/bibliografia.bib
+++ b/Thesis/bibliografia.bib
@@ -666,3 +666,38 @@ Publisher: Kurukshetra},
 	doi = {10.1007/978-1-4471-6699-3},
 	keywords = {Artificial intelligence, Artificial Intelligence, Electrical engineering, Electrical Engineering, Mathematical statistics, Pattern recognition, Pattern Recognition, Probabilities, Probability and Statistics in Computer Science, Probability Theory and Stochastic Processes},
 }
+
+@book{de_vries_learn_2020,
+	title = {Learn {OpenGL}: {Learn} modern {OpenGL} graphics programming in a step-by-step fashion},
+	isbn = {978-90-90-33256-7},
+	shorttitle = {Learn {OpenGL}},
+	abstract = {Graphics programmers are often coined the 'wizards' of the game industry. As every magician knows, terms like wizardry and magic are often somewhat exaggerated. Yet, there is a certain charm to graphics programming: the ability to conjure up complete living worlds at our fingertips. Learn OpenGL will teach you the basics, the intermediate, and tons of advanced knowledge, using modern (core-profile) OpenGL. The aim of this book is to show you all there is to modern OpenGL in an easy-to-understand fashion, with clear examples and step-by-step instructions, while also providing a useful reference for later studies. After years of continuous work and improvements on the accompanying website learnopengl.com, with the help of thousands of readers, its content has been professionally revised for this physical copy you now find in your hands. Graphics programming isn't as hard as many people make it out to be... you just need to start.},
+	language = {English},
+	author = {de Vries, Joey},
+	year = {2020},
+	note = {OCLC: 1198376019},
+}
+
+@article{collobert_natural_nodate,
+	title = {Natural {Language} {Processing} ({Almost}) from {Scratch}},
+	abstract = {We propose a uniﬁed neural network architecture and learning algorithm that can be applied to various natural language processing tasks including part-of-speech tagging, chunking, named entity recognition, and semantic role labeling. This versatility is achieved by trying to avoid task-speciﬁc engineering and therefore disregarding a lot of prior knowledge. Instead of exploiting man-made input features carefully optimized for each task, our system learns internal representations on the basis of vast amounts of mostly unlabeled training data. This work is then used as a basis for building a freely available tagging system with good performance and minimal computational requirements.},
+	language = {en},
+	journal = {NATURAL LANGUAGE PROCESSING},
+	author = {Collobert, Ronan and Weston, Jason and Bottou, Leon and Karlen, Michael and Kavukcuoglu, Koray and Kuksa, Pavel},
+	pages = {45},
+	file = {Collobert et al. - Natural Language Processing (Almost) from Scratch.pdf:C\:\\Users\\ruben\\Zotero\\storage\\9GG8N6B4\\Collobert et al. - Natural Language Processing (Almost) from Scratch.pdf:application/pdf},
+}
+
+@article{collobert_natural_2011,
+	title = {Natural {Language} {Processing} ({Almost}) from {Scratch}},
+	volume = {12},
+	issn = {1532-4435},
+	abstract = {We propose a unified neural network architecture and learning algorithm that can be applied to various natural language processing tasks including part-of-speech tagging, chunking, named entity recognition, and semantic role labeling. This versatility is achieved by trying to avoid task-specific engineering and therefore disregarding a lot of prior knowledge. Instead of exploiting man-made input features carefully optimized for each task, our system learns internal representations on the basis of vast amounts of mostly unlabeled training data. This work is then used as a basis for building a freely available tagging system with good performance and minimal computational requirements.},
+	number = {null},
+	journal = {The Journal of Machine Learning Research},
+	author = {Collobert, Ronan and Weston, Jason and Bottou, Léon and Karlen, Michael and Kavukcuoglu, Koray and Kuksa, Pavel},
+	month = nov,
+	year = {2011},
+	pages = {2493--2537},
+	file = {Full Text PDF:C\:\\Users\\ruben\\Zotero\\storage\\5ZJR8CUA\\Collobert et al. - 2011 - Natural Language Processing (Almost) from Scratch.pdf:application/pdf},
+}
