--- a/Thesis/bibliografia.bib
+++ b/Thesis/bibliografia.bib
@@ -1,73 +1,83 @@
 
-@article{johnny_huynh_separating_2008,
+@techreport{huynh_separating_2009,
 	title = {Separating {Axis} {Theorem} for {Oriented} {Bounding} {Boxes}},
+	url = {https://www.jkh.me/files/tutorials/Separating%20Axis%20Theorem%20for%20Oriented%20Bounding%20Boxes.pdf},
+	abstract = {This tutorial is based on understanding how the Separating Axis Theorem is applied in Gottstalk's OBB-Tree: A Hierarchical Structure for Rapid Interference Detection},
 	language = {en},
-	author = {{Johnny Huynh}},
-	month = dec,
-	year = {2008},
-	pages = {45},
+	author = {Huynh, Johnny},
+	year = {2009},
 	file = {Huynh - Separating Axis Theorem for Oriented Bounding Boxe.pdf:C\:\\Users\\ruben\\Zotero\\storage\\GPFDZV2B\\Huynh - Separating Axis Theorem for Oriented Bounding Boxe.pdf:application/pdf},
 }
 
-@article{david_eberly_dynamic_2008,
-	title = {Dynamic {Collision} {Detection} using {Oriented} {Bounding} {Boxes}},
-	language = {en},
-	author = {{David Eberly}},
-	month = mar,
-	year = {2008},
-	pages = {40},
-	file = {Eberly - Dynamic Collision Detection using Oriented Boundin.pdf:C\:\\Users\\ruben\\Zotero\\storage\\2JWI9K36\\Eberly - Dynamic Collision Detection using Oriented Boundin.pdf:application/pdf},
-}
-
-@book{joey_de_vries_learn_2020,
-	title = {Learn {OpenGL}: {Learn} modern {OpenGL} graphics programming in a step-by-step fashion.},
-	isbn = {978-90-90-33256-7},
-	shorttitle = {Learn {OpenGL}},
-	abstract = {Graphics programmers are often coined the 'wizards' of the game industry. As every magician knows, terms like wizardry and magic are often somewhat exaggerated. Yet, there is a certain charm to graphics programming: the ability to conjure up complete living worlds at our fingertips.Learn OpenGL will teach you the basics, the intermediate, and tons of advanced knowledge, using modern (core-profile) OpenGL. The aim of this book is to show you all there is to modern OpenGL in an easy-to-understand fashion, with clear examples and step-by-step instructions, while also providing a useful reference for later studies.After years of continuous work and improvements on the accompanying website learnopengl.com, with the help of thousands of readers, its content has been professionally revised for this physical copy you now find in your hands.Graphics programming isn't as hard as many people make it out to be... you just need to start.},
-	language = {Inglés},
-	author = {{Joey de Vries}},
-	month = jun,
-	year = {2020},
-}
-
-@book{bjarne_stroustrup_tour_2013,
+@book{stroustrup_tour_2013,
 	address = {Upper Saddle River, NJ},
 	title = {A {Tour} of {C}++},
 	isbn = {978-0-321-95831-0},
 	abstract = {The C++11 standard allows programmers to express ideas more clearly, simply, and directly, and to write faster, more efficient code. Bjarne Stroustrup, the designer and original implementer of C++, thoroughly covers the details of this language and its use in his definitive reference, The C++ Programming Language, Fourth Edition. In A Tour of C++, Stroustrup excerpts the overview chapters from that complete reference, expanding and enhancing them to give an experienced programmer-in just a few hours-a clear idea of what constitutes modern C++. In this concise, self-contained guide, Stroustrup covers most major language features and the major standard-library components-not, of course, in great depth, but to a level that gives programmers a meaningful overview of the language, some key examples, and practical help in getting started. Stroustrup presents the C++ features in the context of the programming styles they support, such as object-oriented and generic programming. His tour is remarkably comprehensive. Coverage begins with the basics, then ranges widely through more advanced topics, including many that are new in C++11, such as move semantics, uniform initialization, lambda expressions, improved containers, random numbers, and concurrency. The tour ends with a discussion of the design and evolution of C++ and the extensions added for C++11. This guide does not aim to teach you how to program (see Stroustrup's Programming: Principles and Practice Using C++ for that); nor will it be the only resource you'll need for C++ mastery (see Stroustrup's The C++ Programming Language, Fourth Edition, for that). If, however, you are a C or C++ programmer wanting greater familiarity with the current C++ language, or a programmer versed in another language wishing to gain an accurate picture of the nature and benefits of modern C++, you can't find a shorter or simpler introduction than this tour provides.},
 	language = {Inglés},
-	author = {{Bjarne Stroustrup}},
+	publisher = {Addison-Wesley},
+	author = {Stroustrup, Bjarne},
 	month = oct,
 	year = {2013},
 }
 
-@book{melanie_mitchell_introduction_1998,
+@book{mitchell_introduction_1998,
 	title = {An {Introduction} to {Genetic} {Algorithms}},
 	isbn = {978-0-262-63185-3},
 	abstract = {Genetic algorithms have been used in science and engineering as adaptive algorithms for solving practical problems and as computational models of natural evolutionary systems. This brief, accessible introduction describes some of the most interesting research in the field and also enables readers to implement and experiment with genetic algorithms on their own. It focuses in depth on a small set of important and interesting topics--particularly in machine learning, scientific modeling, and artificial life--and reviews a broad span of research, including the work of Mitchell and her colleagues. The descriptions of applications and modeling projects stretch beyond the strict boundaries of computer science to include dynamical systems theory, game theory, molecular biology, ecology, evolutionary biology, and population genetics, underscoring the exciting "general purpose" nature of genetic algorithms as search methods that can be employed across disciplines. An Introduction to Genetic Algorithms is accessible to students and researchers in any scientific discipline. It includes many thought and computer exercises that build on and reinforce the reader's understanding of the text. The first chapter introduces genetic algorithms and their terminology and describes two provocative applications in detail. The second and third chapters look at the use of genetic algorithms in machine learning (computer programs, data analysis and prediction, neural networks) and in scientific models (interactions among learning, evolution, and culture; sexual selection; ecosystems; evolutionary activity). Several approaches to the theory of genetic algorithms are discussed in depth in the fourth chapter. The fifth chapter takes up implementation, and the last chapter poses some currently unanswered questions and surveys prospects for the future of evolutionary computation.},
 	language = {en},
 	publisher = {MIT Press},
-	author = {{Melanie Mitchell}},
+	author = {Mitchell, Melanie},
 	year = {1998},
 	keywords = {Computers / Intelligence (AI) \& Semantics},
 }
 
-@article{juan_carlos_pozas_bustos_algoritmos_2000,
+@misc{bustos_algoritmos_2000,
 	title = {Algoritmos {Genéticos}. {Aplicación} al {Juego} de las {N} {Reinas}.},
+	url = {http://www.it.uc3m.es/jvillena/irc/practicas/06-07/06.pdf},
+	abstract = {En el presente documento estudiaremos la historia, el desarrollo,
+las ventajas y limitaciones de los algoritmos genéticos así como
+una de sus posibles aplicaciones en la resolución de problemas},
 	language = {es},
-	author = {{Juan Carlos Pozas Bustos} and {Nieves Vázquez Vázquez}},
+	author = {Bustos, Juan Carlos Pozas and Vázquez, Nieves Vázquez},
 	year = {2000},
-	pages = {10},
 	file = {Bustos y Vázquez - Algoritmos Genéticos. Aplicación al Juego de las N.pdf:C\:\\Users\\ruben\\Zotero\\storage\\IW7I65VV\\Bustos y Vázquez - Algoritmos Genéticos. Aplicación al Juego de las N.pdf:application/pdf},
 }
 
-@article{takeyas_introduccion_2011,
+@misc{takeyas_introduccion_2011,
 	title = {{INTRODUCCIÓN} {A} {LA} {INTELIGENCIA} {ARTIFICIAL}},
+	url = {http://www.itnuevolaredo.edu.mx/takeyas/Articulos/Inteligencia%20Artificial/ARTICULO%20Introduccion%20a%20la%20Inteligencia%20Artificial.pdf},
+	abstract = {Desde el origen de las computadoras
+digitales, constantemente se han hecho
+investigaciones científicas y tecnológicas con la
+finalidad de facilitar algunas actividades propias
+de los seres humanos. Se ha logrado automatizar
+muchos procesos mecánicos, de cálculo, de
+almacenamiento de datos, de procesamiento, etc.
+desarrollando, cada vez, herramientas de
+cómputo capaces de auxiliar en forma directa
+cada una de estas actividades. En varias de ellas
+se tiene la necesidad de examinar el medio
+ambiente donde se desarrollará tal actividad y
+realizar un análisis de las situaciones y tomar
+una decisión siguiendo un razonamiento lógico.
+Los seres humanos, a diferencia de otras
+especies, tienen la capacidad de razonar sobre
+una serie de percepciones de hechos y
+proposiciones estableciendo relaciones entre si.
+A esta capacidad se le llama inteligencia.
+Mediante el uso de los sentidos, puede enterarse
+de hechos que suceden en el medio ambiente que
+lo rodea y es capaz de establecer relaciones entre
+ellos para obtener conclusiones, desarrollar
+conocimiento y actuar en base a ellos. De
+manera semejante, se han desarrollado
+aplicaciones que emulan el comportamiento
+humano mediante sistemas computacionales},
 	language = {es},
 	author = {Takeyas, Bruno López},
 	month = aug,
 	year = {2011},
-	pages = {3},
 	file = {Takeyas - INTRODUCCIÓN A LA INTELIGENCIA ARTIFICIAL.pdf:C\:\\Users\\ruben\\Zotero\\storage\\WIIR5W3J\\Takeyas - INTRODUCCIÓN A LA INTELIGENCIA ARTIFICIAL.pdf:application/pdf},
 }
 
@@ -81,26 +91,26 @@
 	year = {2010},
 }
 
-@article{dr_anantkumar_umbarkar_crossover_2015,
+@article{umbarkar_crossover_2015,
 	title = {{CROSSOVER} {OPERATORS} {IN} {GENETIC} {ALGORITHMS}: {A} {REVIEW}},
 	volume = {6},
 	shorttitle = {{CROSSOVER} {OPERATORS} {IN} {GENETIC} {ALGORITHMS}},
 	doi = {10.21917/ijsc.2015.0150},
 	abstract = {The performance of Genetic Algorithm (GA) depends on various operators. Crossover operator is one of them. Crossover operators are mainly classified as application dependent crossover operators and application independent crossover operators. Effect of crossover operators in GA is application as well as encoding dependent. This paper will help researchers in selecting appropriate crossover operator for better results. The paper contains description about classical standard crossover operators, binary crossover operators, and application dependant crossover operators. Each crossover operator has its own advantages and disadvantages under various circumstances. This paper reviews the crossover operators proposed and experimented by various researchers.},
 	journal = {ICTACT Journal on Soft Computing ( Volume: 6 , Issue: 1 )},
-	author = {{Dr. Anantkumar Umbarkar} and {P. Sheth}},
+	author = {Umbarkar, Dr. Anantkumar and Sheth, P.},
 	month = oct,
 	year = {2015},
 	file = {Full Text PDF:C\:\\Users\\ruben\\Zotero\\storage\\LFTUBCSN\\Umbarkar y Sheth - 2015 - CROSSOVER OPERATORS IN GENETIC ALGORITHMS A REVIE.pdf:application/pdf},
 }
 
-@inproceedings{r_l_haupt_optimum_2000,
+@inproceedings{haupt_optimum_2000,
 	title = {Optimum population size and mutation rate for a simple real genetic algorithm that optimizes array factors},
 	volume = {2},
 	doi = {10.1109/APS.2000.875398},
 	abstract = {There has been an explosion of papers describing applications of a genetic algorithm (GA) to electromagnetics problems. Most of the work has followed traditional GA philosophy when choosing the population size and mutation rate of the genetic algorithm. This paper reports the results of experiments to determine the optimum population size and mutation rate for a simple real genetic algorithm. The choice of population size and mutation rate can cause the run time of the GA to vary by several orders of magnitude. The results of this investigation show that a small population size and relatively large mutation rate is far superior to the large population sizes and low mutation rates that is used by most of the papers presented in the electromagnetics community and by the GA community at large. The results of the numerical experiments presented in this paper suggest that the best mutation rate for GAs lies between 5 and 20\% while the population size should be less than 16.},
 	booktitle = {{IEEE} {Antennas} and {Propagation} {Society} {International} {Symposium}. {Transmitting} {Waves} of {Progress} to the {Next} {Millennium}. 2000 {Digest}. {Held} in conjunction with: {USNC}/{URSI} {National} {Radio} {Science} {Meeting} ({C}},
-	author = {{R. L. Haupt}},
+	author = {Haupt, R. L.},
 	month = jul,
 	year = {2000},
 	keywords = {antenna phased arrays, antenna radiation patterns, Application software, array factors, Displays, Electromagnetics, electromagnetics problems, Explosions, genetic algorithm, genetic algorithms, Genetic algorithms, Genetic mutations, Helium, linear antenna array, linear antenna arrays, numerical experiments, optimum mutation rate, optimum population size, phase weights, Phased arrays, run time, sidelobe level, simple real genetic algorithm, Vectors, Wheels},
@@ -108,27 +118,15 @@
 	file = {IEEE Xplore Full Text PDF:C\:\\Users\\ruben\\Zotero\\storage\\VSI7MX7Y\\Haupt - 2000 - Optimum population size and mutation rate for a si.pdf:application/pdf;IEEE Xplore Abstract Record:C\:\\Users\\ruben\\Zotero\\storage\\9GGUGU9B\\875398.html:text/html},
 }
 
-@article{david_ha_visual_2017,
+@misc{ha_visual_2017,
 	title = {A {Visual} {Guide} to {Evolution} {Strategies}},
+	url = {https://blog.otoro.net/2017/10/29/visual-evolution-strategies/},
 	abstract = {A Visual Guide to Evolution Strategies},
 	urldate = {2020-11-08},
-	author = {{David Ha}},
+	author = {Ha, David},
 	month = oct,
 	year = {2017},
 	file = {Snapshot:C\:\\Users\\ruben\\Zotero\\storage\\PJMAL86K\\visual-evolution-strategies.html:text/html},
-}
-
-@article{andrew_n_sloss_2019_2019,
-	title = {2019 {Evolutionary} {Algorithms} {Review}},
-	abstract = {Evolutionary algorithm research and applications began over 50 years ago. Like other artificial intelligence techniques, evolutionary algorithms will likely see increased use and development due to the increased availability of computation, more robust and available open source software libraries, and the increasing demand for artificial intelligence techniques. As these techniques become more adopted and capable, it is the right time to take a perspective of their ability to integrate into society and the human processes they intend to augment. In this review, we explore a new taxonomy of evolutionary algorithms and resulting classifications that look at five main areas: the ability to manage the control of the environment with limiters, the ability to explain and repeat the search process, the ability to understand input and output causality within a solution, the ability to manage algorithm bias due to data or user design, and lastly, the ability to add corrective measures. These areas are motivated by today's pressures on industry to conform to both societies concerns and new government regulatory rules. As many reviews of evolutionary algorithms exist, after motivating this new taxonomy, we briefly classify a broad range of algorithms and identify areas of future research.},
-	urldate = {2020-11-08},
-	journal = {arXiv:1906.08870 [cs]},
-	author = {{Andrew N. Sloss} and {Steven Gustafson}},
-	month = jun,
-	year = {2019},
-	note = {arXiv: 1906.08870},
-	keywords = {Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing},
-	file = {arXiv Fulltext PDF:C\:\\Users\\ruben\\Zotero\\storage\\JYQSIS8E\\Sloss y Gustafson - 2019 - 2019 Evolutionary Algorithms Review.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\ruben\\Zotero\\storage\\A4GXGM4F\\1906.html:text/html},
 }
 
 @misc{openai_openaigym_2020,
@@ -142,7 +140,7 @@
 	year = {2020},
 }
 
-@article{thomas_geijtenbeek_flexible_2013,
+@article{geijtenbeek_flexible_2013,
 	title = {Flexible muscle-based locomotion for bipedal creatures},
 	volume = {32},
 	issn = {0730-0301, 1557-7368},
@@ -152,27 +150,28 @@
 	number = {6},
 	urldate = {2020-11-10},
 	journal = {ACM Transactions on Graphics},
-	author = {{Thomas Geijtenbeek} and {Michiel van de Panne} and {A. Frank van der Stappen}},
+	author = {Geijtenbeek, Thomas and Panne, Michiel van de and Stappen, A. Frank van der},
 	month = nov,
 	year = {2013},
 	pages = {1--11},
 	file = {Geijtenbeek et al. - 2013 - Flexible muscle-based locomotion for bipedal creat.pdf:C\:\\Users\\ruben\\Zotero\\storage\\AZ9YJBAD\\Geijtenbeek et al. - 2013 - Flexible muscle-based locomotion for bipedal creat.pdf:application/pdf},
 }
 
-@misc{robert_jankowski_robertjankowskiga-openai-gym_2020,
+@misc{jankowski_robertjankowskiga-openai-gym_2020,
 	title = {robertjankowski/ga-openai-gym},
 	copyright = {MIT License         ,                 MIT License},
 	abstract = {Usage of genetic algorithms to train a neural network in the multiple OpenAI gym environments.},
 	urldate = {2020-11-10},
-	author = {{Robert Jankowski}},
+	author = {Jankowski, Robert},
 	month = nov,
 	year = {2020},
 	keywords = {bipedalwalker, cartpole-v0, cnn, deep-learning, genetic-algorithm, neural-network, neural-networks, openai-gym, pytorch},
 }
 
-@misc{david_ha_slime_2020,
+@misc{ha_slime_2020,
 	title = {Slime {Volleyball} {Gym} {Environment}},
-	author = {{David Ha}},
+	url = {https://github.com/hardmaru/slimevolleygym},
+	author = {Ha, David},
 	year = {2020},
 }
 
@@ -188,50 +187,17 @@
 	file = {Full Text PDF:C\:\\Users\\ruben\\Zotero\\storage\\F38RIL65\\Ahmed - 2010 - Genetic Algorithm for the Traveling Salesman Probl.pdf:application/pdf},
 }
 
-@article{kaya_novel_2011,
-	title = {A {Novel} {Crossover} {Operator} for {Genetic} {Algorithms}: {Ring} {Crossover}},
-	shorttitle = {A {Novel} {Crossover} {Operator} for {Genetic} {Algorithms}},
-	abstract = {The genetic algorithm (GA) is an optimization and search technique based on the principles of genetics and natural selection. A GA allows a population composed of many individuals to evolve under specified selection rules to a state that maximizes the "fitness" function. In that process, crossover operator plays an important role. To comprehend the GAs as a whole, it is necessary to understand the role of a crossover operator. Today, there are a number of different crossover operators that can be used in GAs. However, how to decide what operator to use for solving a problem? A number of test functions with various levels of difficulty has been selected as a test polygon for determine the performance of crossover operators. In this paper, a novel crossover operator called 'ring crossover' is proposed. In order to evaluate the efficiency and feasibility of the proposed operator, a comparison between the results of this study and results of different crossover operators used in GAs is made through a number of test functions with various levels of difficulty. Results of this study clearly show significant differences between the proposed operator and the other crossover operators.},
-	urldate = {2020-11-12},
-	journal = {arXiv:1105.0355 [cs]},
-	author = {Kaya, Yılmaz and Uyar, Murat and Tek{\textbackslash}D\{j\}n, Ramazan},
-	month = may,
-	year = {2011},
-	note = {arXiv: 1105.0355},
-	keywords = {Computer Science - Neural and Evolutionary Computing},
-	file = {arXiv Fulltext PDF:C\:\\Users\\ruben\\Zotero\\storage\\V39WAU4P\\Kaya et al. - 2011 - A Novel Crossover Operator for Genetic Algorithms.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\ruben\\Zotero\\storage\\5V5GGRQV\\1105.html:text/html},
-}
-
-@article{marwala_forecasting_2010,
-	title = {Forecasting the {Stock} {Market} {Index} {Using} {Artificial} {Intelligence} {Techniques}},
-	abstract = {The weak form of Efficient Market hypothesis (EMH) states that it is impossible to forecast the future price of an asset based on the information contained in the historical prices of an asset. This means that the market behaves as a random walk and as a result makes forecasting impossible. Furthermore, financial forecasting is a difficult task due to the intrinsic complexity of the financial system. The objective of this work was to use artificial intelligence (AI) techniques to model and predict the future price of a stock market index. Three artificial intelligence techniques, namely, neural networks (NN), support vector machines and neuro-fuzzy systems are implemented in forecasting the future price of a stock market index based on its historical price information. Artificial intelligence techniques have the ability to take into consideration financial system complexities and they are used as financial time series forecasting tools. Two techniques are used to benchmark the AI techniques, namely, Autoregressive Moving Average (ARMA) which is linear modelling technique and random walk (RW) technique. The experimentation was performed on data obtained from the Johannesburg Stock Exchange. The data used was a series of past closing prices of the All Share Index. The results showed that the three techniques have the ability to predict the future price of the Index with an acceptable accuracy. All three artificial intelligence techniques outperformed the linear model. However, the random walk method outperfomed all the other techniques. These techniques show an ability to predict the future price however, because of the transaction costs of trading in the market, it is not possible to show that the three techniques can disprove the weak form of market efficiency. The results show that the ranking of performances support vector machines, neuro-fuzzy systems, multilayer perceptron neural networks is dependent on the accuracy measure used.},
-	language = {en},
-	author = {Marwala, Lufuno Ronald},
-	year = {2010},
-	pages = {166},
-	file = {Marwala - Forecasting the Stock Market Index Using Artificia.pdf:C\:\\Users\\ruben\\Zotero\\storage\\VAPXP46E\\Marwala - Forecasting the Stock Market Index Using Artificia.pdf:application/pdf},
-}
-
 @misc{santos_using_2020,
 	title = {Using {Deep} {Learning} {AI} to {Predict} the {Stock} {Market}},
+	url = {https://towardsdatascience.com/using-deep-learning-ai-to-predict-the-stock-market-9399cf15a312},
 	abstract = {Forecasting Stock Prices with Neural Networks containing Multivariable Inputs from Technical Analysis},
 	language = {en},
 	urldate = {2020-11-13},
-	journal = {Medium},
+	journal = {towardsdatascience},
 	author = {Santos, Marco},
 	month = sep,
 	year = {2020},
 	file = {Snapshot:C\:\\Users\\ruben\\Zotero\\storage\\DNUZX6DH\\using-deep-learning-ai-to-predict-the-stock-market-9399cf15a312.html:text/html},
-}
-
-@article{razali_genetic_2011,
-	title = {Genetic {Algorithm} {Performance} with {Different} {Selection} {Strategies} in {Solving} {TSP}},
-	abstract = {A genetic algorithm (GA) has several genetic operators that can be modified to improve the performance of particular implementations. These operators include parent selection, crossover and mutation. Selection is one of the important operations in the GA process. There are several ways for selection. This paper presents the comparison of GA performance in solving travelling salesman problem (TSP) using different parent selection strategy. Several TSP instances were tested and the results show that tournament selection strategy outperformed proportional roulette wheel and rankbased roulette wheel selections, achieving best solution quality with low computing times. Results also reveal that tournament and proportional roulette wheel can be superior to the rankbased roulette wheel selection for smaller problems only and become susceptible to premature convergence as problem size increases.},
-	language = {en},
-	author = {Razali, Noraini Mohd and Geraghty, John},
-	year = {2011},
-	pages = {6},
-	file = {Razali y Geraghty - 2011 - Genetic Algorithm Performance with Different Selec.pdf:C\:\\Users\\ruben\\Zotero\\storage\\IMTU5K3E\\Razali y Geraghty - 2011 - Genetic Algorithm Performance with Different Selec.pdf:application/pdf},
 }
 
 @article{kumar_blending_2012,
@@ -290,8 +256,9 @@
 	file = {Full Text PDF:C\:\\Users\\ruben\\Zotero\\storage\\5ZJR8CUA\\Collobert et al. - 2011 - Natural Language Processing (Almost) from Scratch.pdf:application/pdf},
 }
 
-@misc{furqan_performance_2017,
+@article{furqan_performance_2017,
 	title = {Performance of {Arithmetic} {Crossover} and {Heuristic} {Crossover} in {Genetic} {Algorithm} {Based} on {Alpha} {Parameter}},
+	doi = {10.9790/0661-1905013136},
 	abstract = {Genetic algorithm (GA) is a heuristic search algorithm based on the idea of natural selection that 
 occurs in the process of evolution and genetic operations. One of the critical stages in the genetic algorithm is a crossover process. In the crossover, phase occurs the gene mix between the parent that it will determine the 
 diversity in the population. This paper will describe the effects of the alpha parameter in the crossover process 
@@ -303,22 +270,26 @@ Crossover; the alpha parameter used as multiplier factor after the subtraction p
 parents.},
 	language = {en},
 	urldate = {2020-11-24},
-	journal = {undefined},
+	journal = {iosrjournals},
 	author = {Furqan, Mhd and Hartono, H. and Ongko, Erianto and Ikhsan, M.},
 	year = {2017},
 	file = {Snapshot:C\:\\Users\\ruben\\Zotero\\storage\\777JKTPV\\903dce68eb97f50c3993305100c95d8607d1e459.html:text/html},
 }
 
-@article{gestal_introduccion_2013,
+@misc{gestal_introduccion_2013,
 	title = {Introduccion a los {Algoritmos} {Geneticos}},
+	url = {https://www.researchgate.net/publication/237812449_Introduccion_a_los_Algoritmos_Geneticos},
+	abstract = {El siguiente tutorial no pretende ser un documento exhaustivo acer-ca de los Algoritmos Gen´eticos. M´as bien una referencia que sirva paraintroducir la terminolog´ıa, los conceptos claves y una bibliograf´ıa de ba-se, quedando en manos del lector profundizar en aquellos aspectos queconsidere de mayor inter´es},
 	author = {Gestal, Marcos},
 	month = aug,
 	year = {2013},
 	file = {Full Text PDF:C\:\\Users\\ruben\\Zotero\\storage\\IGXDMJB4\\Gestal - 2013 - Introduccion a los Algoritmos Geneticos.pdf:application/pdf},
 }
 
-@misc{mccarthy_basic_2007,
-	title = {Basic {Questions}},
+@misc{mccarthy_what_2007,
+	title = {{WHAT} {IS} {ARTIFICIAL} {INTELLIGENCE}?},
+	url = {http://www-formal.stanford.edu/jmc/whatisai/whatisai.html},
+	abstract = {This article for the layman answers basic questions about artificial intelligence. The opinions expressed here are not all consensus opinion among researchers in AI.},
 	urldate = {2020-11-29},
 	author = {McCarthy, John},
 	month = nov,
@@ -326,22 +297,92 @@ parents.},
 	file = {Basic Questions:C\:\\Users\\ruben\\Zotero\\storage\\DDM8YVJV\\node1.html:text/html},
 }
 
+@misc{eberly_dynamic_2001,
+	title = {Dynamic {Collision} {Detection} using {Oriented} {Bounding} {Boxes}},
+	url = {https://www.geometrictools.com/Documentation/DynamicCollisionDetection.pdf},
+	abstract = {this paper are motivated by the 1996 SIGGRAPH article [1] on oriented bounding boxes (OBBs) and on OBB trees that are used to provide a hierarchical way of deciding if two objects intersect. The computational goal is to minimize the time spent determining if two objects do not intersect. An OBB tree essentially provides a multiscale representation of the object. The root of the tree corresponds to an approximation of the object by a single OBB. The boxes corresponding to the middle levels of the tree represent smaller pieces of the object, thus providing a somewhat better approximation to the object than the root. The leaf nodes of the tree represent the actual geometry of the object. For all practical purposes, the object is a triangular mesh and each leaf node of the OBB tree corresponds to a single triangle in the mesh. Intersection testing is based on the following theorem from computational geometry: Two non--intersecting convex polyhedra can be separated by a plane that is either parallel to a face of one of the polyhedra or that contains an edge from each of the polyhedra. It is necessary and su\#cient to determine whether or not two convex polyhedra intersect by examining the intersections of the projections of the polyhedra on lines that are perpendicular to the planes described in the theorem. If the minimal intervals containing the projections of the polyhedra onto one of these lines do not intersect, then the polyhedra themselves do not intersect. In this case the line is said to be a separating axes},
+	author = {Eberly, David},
+	month = may,
+	year = {2001},
+}
+
+@book{de_vries_learn_2020,
+	title = {Learn {OpenGL}: {Learn} modern {OpenGL} graphics programming in a step-by-step fashion},
+	isbn = {978-90-90-33256-7},
+	shorttitle = {Learn {OpenGL}},
+	url = {https://www.amazon.es/Learn-OpenGL-programming-step-step/dp/9090332561},
+	abstract = {Graphics programmers are often coined the 'wizards' of the game industry. As every magician knows, terms like wizardry and magic are often somewhat exaggerated. Yet, there is a certain charm to graphics programming: the ability to conjure up complete living worlds at our fingertips. Learn OpenGL will teach you the basics, the intermediate, and tons of advanced knowledge, using modern (core-profile) OpenGL. The aim of this book is to show you all there is to modern OpenGL in an easy-to-understand fashion, with clear examples and step-by-step instructions, while also providing a useful reference for later studies. After years of continuous work and improvements on the accompanying website learnopengl.com, with the help of thousands of readers, its content has been professionally revised for this physical copy you now find in your hands. Graphics programming isn't as hard as many people make it out to be... you just need to start.},
+	language = {English},
+	publisher = {Kendall \& Welling},
+	author = {de Vries, Joey},
+	year = {2020},
+	note = {OCLC: 1198376019},
+}
+
+@article{kaya_novel_2011,
+	title = {A {Novel} {Crossover} {Operator} for {Genetic} {Algorithms}: {Ring} {Crossover}},
+	volume = {abs/1105.0355},
+	shorttitle = {A {Novel} {Crossover} {Operator} for {Genetic} {Algorithms}},
+	abstract = {The genetic algorithm (GA) is an optimization and search technique based on the principles of genetics and natural selection. A GA allows a population composed of many individuals to evolve under specified selection rules to a state that maximizes the "fitness" function. In that process, crossover operator plays an important role. To comprehend the GAs as a whole, it is necessary to understand the role of a crossover operator. Today, there are a number of different crossover operators that can be used in GAs. However, how to decide what operator to use for solving a problem? A number of test functions with various levels of difficulty has been selected as a test polygon for determine the performance of crossover operators. In this paper, a novel crossover operator called 'ring crossover' is proposed. In order to evaluate the efficiency and feasibility of the proposed operator, a comparison between the results of this study and results of different crossover operators used in GAs is made through a number of test functions with various levels of difficulty. Results of this study clearly show significant differences between the proposed operator and the other crossover operators.},
+	journal = {CoRR},
+	author = {Kaya, Yilmaz and Uyar, Murat and Tekin, Ramazan},
+	month = jan,
+	year = {2011},
+}
+
 @article{moghaddam_stock_2016,
 	title = {Stock market index prediction using artificial neural network},
 	volume = {21},
 	issn = {2077-1886},
+	url = {http://www.sciencedirect.com/science/article/pii/S2077188616300245},
 	doi = {10.1016/j.jefas.2016.07.002},
 	abstract = {In this study the ability of artificial neural network (ANN) in forecasting the daily NASDAQ stock exchange rate was investigated. Several feed forward ANNs that were trained by the back propagation algorithm have been assessed. The methodology used in this study considered the short-term historical stock prices as well as the day of week as inputs. Daily stock exchange rates of NASDAQ from January 28, 2015 to 18 June, 2015 are used to develop a robust model. First 70 days (January 28 to March 7) are selected as training dataset and the last 29 days are used for testing the model prediction ability. Networks for NASDAQ index prediction for two type of input dataset (four prior days and nine prior days) were developed and validated.
 Resumen
 En este estudio se investigó la capacidad de previsión del índice bursátil diario NASDAQ, por parte de la red neuronal artificial (RNA). Se evaluaron diversas RNA proalimentadas, que fueron entrenadas mediante un algoritmo de retropropagación. La metodología utilizada en este estudio consideró como inputs los precios bursátiles históricos a corto plazo, así como el día de la semana. Se utilizaron los índices bursátiles diarios de NASDAQ del 28 de enero al 18 de junio de 2015, para desarrollar un modelo robusto. Se seleccionaron los primeros 70 días (del 28 de enero al 7 de marzo) como conjuntos de datos de entrenamiento, y los últimos 29 días para probar la capacidad del modelo de predicción. Se desarrollaron y validaron redes para la predicción del índice NASDAQ, para dos tipos de conjuntos de datos de input (los cuatro y los nueve días previos).},
 	language = {en},
 	number = {41},
-	urldate = {2020-11-29},
+	urldate = {2020-12-10},
 	journal = {Journal of Economics, Finance and Administrative Science},
 	author = {Moghaddam, Amin Hedayati and Moghaddam, Moein Hedayati and Esfandyari, Morteza},
 	month = dec,
 	year = {2016},
 	keywords = {ANN, NASDAQ, Predicción, Prediction},
 	pages = {89--93},
-	file = {ScienceDirect Full Text PDF:C\:\\Users\\ruben\\Zotero\\storage\\5P65IHJK\\Moghaddam et al. - 2016 - Stock market index prediction using artificial neu.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\ruben\\Zotero\\storage\\WTKC936M\\S2077188616300245.html:text/html},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\ruben\\Zotero\\storage\\M2TCUFZW\\Moghaddam et al. - 2016 - Stock market index prediction using artificial neu.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\ruben\\Zotero\\storage\\HPYLGETL\\S2077188616300245.html:text/html},
+}
+
+@article{pandey_performance_2016,
+	series = {1st {International} {Conference} on {Information} {Security} \& {Privacy} 2015},
+	title = {Performance {Evaluation} of {Selection} {Methods} of {Genetic} {Algorithm} and {Network} {Security} {Concerns}},
+	volume = {78},
+	issn = {1877-0509},
+	url = {http://www.sciencedirect.com/science/article/pii/S1877050916000065},
+	doi = {10.1016/j.procs.2016.02.004},
+	abstract = {Security is the prominent concern for the network and maintaining security is highly recommended. There exists several approaches has been attempted to address this challenging task. This paper presents the applicability of the genetic algorithm (GA) for security concerns. The working of the GA heavily depends on the various factors includes: reproduction operators, selection techniques, chromosome representation and problem type. There exist several selection methods presents play a vital role, but identifying the suitable one is a grand and persistent challenge. In this paper, a comparison of various selection techniques in the GA has been reported. The GA utilizes operators: crossover, mutation and selection to guide the searching in an iterative manner. A significant work has been conducted explains the importance of crossover and mutation probabilities, but very few researchers (some of them has shown the comparison of selection methods) presented the importance of selection approaches. The comparison of three: Rank based, Roulette wheel and Tournament selection techniques have been presented in this paper over Travelling Salesman Problem. Computational experiments have been conducted and results are collected considering distance should be as minimum as possible. Statistical tests (Paired T-Test and two ways ANOVA) are conducted to report the performance significance of selection techniques considered.},
+	language = {en},
+	urldate = {2020-12-10},
+	journal = {Procedia Computer Science},
+	author = {Pandey, Hari Mohan},
+	month = jan,
+	year = {2016},
+	keywords = {Genetic algorithm, Selection methods., Travelling salesman problem},
+	pages = {13--18},
+	file = {Full Text:C\:\\Users\\ruben\\Zotero\\storage\\BWLW7EYQ\\Pandey - 2016 - Performance Evaluation of Selection Methods of Gen.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\ruben\\Zotero\\storage\\XFLUGJU6\\S1877050916000065.html:text/html},
+}
+
+@incollection{banzhaf_2019_2020,
+	address = {Cham},
+	title = {2019 {Evolutionary} {Algorithms} {Review}},
+	isbn = {978-3-030-39957-3 978-3-030-39958-0},
+	url = {http://link.springer.com/10.1007/978-3-030-39958-0_16},
+	language = {en},
+	urldate = {2020-12-10},
+	booktitle = {Genetic {Programming} {Theory} and {Practice} {XVII}},
+	publisher = {Springer International Publishing},
+	author = {Sloss, Andrew N. and Gustafson, Steven},
+	editor = {Banzhaf, Wolfgang and Goodman, Erik and Sheneman, Leigh and Trujillo, Leonardo and Worzel, Bill},
+	year = {2020},
+	doi = {10.1007/978-3-030-39958-0_16},
+	note = {Series Title: Genetic and Evolutionary Computation},
+	pages = {307--344},
 }
